# bevy_docs_extension_demo

./: Cargo.toml  LICENSE-MIT  README.md
docs-rs/: README.md  trait-tags.html
embed-trait-info/: Cargo.toml
embed-trait-info/src/: lib.rs  main.rs
src/: lib.rs
