[package]
name = "bevy_docs_extension_demo"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "A crate for testing rustdoc extensions for Bevy"
documentation = "https://docs.rs/bevy_docs_extension_demo"
repository = "https://github.com/Jondolf/bevy_docs_extension_demo"
readme = "README.md"

[dependencies]
bevy = "0.15"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs_dep"]
rustdoc-args = [
    # Embed tags to the top of documentation pages for common Bevy traits
    # that are implemented by the current type, like `Component` or `Resource`.
    # This makes it easier to see at a glance what types are used for.
    "--html-after-content",
    "docs-rs/trait-tags.html",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }

[workspace]
members = ["embed-trait-info"]
